src/objects/Apttus_Config2__DataValidationEnrichmentRuleset__c.object
<CustomObject>
    <description>Represents a set of data validation and enrichment rules to validate and default values into objects</description>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the ruleset is active</description>
        <inlineHelpText>Indicates whether the ruleset is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description of the rule set</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The description of the rule set</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Message__c</fullName>
        <description>The help text message for the source object match criteria</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The help text message for the source object match criteria</inlineHelpText>
        <label>Message</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The sequence in which the rules will get executed</description>
        <inlineHelpText>The sequence in which the rules will get executed</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SourceAndTargetMatchCriteria__c</fullName>
        <description>Criteria that will be used to match source and target data</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Criteria that will be used to match source and target data</inlineHelpText>
        <label>Source And Target Match Criteria</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SourceDataObject__c</fullName>
        <description>Data object using which target data will be validated or enriched</description>
        <inlineHelpText>Data object using which target data will be validated or enriched</inlineHelpText>
        <label>Source Data Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus_Proposal__Proposal__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Proposal__Proposal_Line_Item__c</fullName>
                </value>
                <value>
                    <fullName>Apttus__APTS_Agreement__c</fullName>
                </value>
                <value>
                    <fullName>Apttus__AgreementLineItem__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__Order__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__OrderLineItem__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TargetObjectFilterCriteria__c</fullName>
        <description>Filter criteria to get to the list of the data objects that needs to be validated / enriched</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Filter criteria to get to the list of the data objects that needs to be validated / enriched</inlineHelpText>
        <label>Target Object Filter Criteria</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TargetObjectParent__c</fullName>
        <description>Related parent object when the child object also need to be validated and enriched</description>
        <inlineHelpText>Related parent object when the child object also need to be validated and enriched</inlineHelpText>
        <label>Target Object Parent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus_Config2__CustomerPurchaseOrder__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__CustomerPOItem__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TargetObjectToValidate__c</fullName>
        <description>Data object that needs to be validated and enriched</description>
        <inlineHelpText>Data object that needs to be validated and enriched</inlineHelpText>
        <label>Target Object To Validate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus_Config2__CustomerPurchaseOrder__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__CustomerPOItem__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Data Validation/Enrichment Ruleset</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Ruleset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Validation/Enrichment Rulesets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>